<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mohrapps.speedydigits.SplashActivity"
    tools:showIn="@layout/activity_splash">

    <ImageButton
        android:id="@+id/achievements"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:background="#00ffffff"
        android:onClick="openAchievements"
        android:src="@drawable/achievement" />

    <ImageButton
        android:id="@+id/leaderboard"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/achievements"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#00ffffff"
        android:onClick="openLeaderboard"
        android:src="@drawable/leaderboard" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00ffffff"
        android:onClick="startGame"
        android:text="Start!"
        android:textSize="70dp" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#00ffffff"
        android:onClick="openHelp"
        android:soundEffectsEnabled="false"
        android:src="@drawable/help_image" />

    <FrameLayout
        android:id="@+id/helplayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#c9cecece"
        android:onClick="closeHelp"
        android:visibility="gone">

        <TextView
            android:id="@+id/helpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:autoText="false"
            android:background="#00ffffff"
            android:padding="40dp"
            android:text="@string/info"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/signoutbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/signout" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signinbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"></com.google.android.gms.common.SignInButton>
    </FrameLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/unavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/achievements"
        android:layout_centerHorizontal="true"
        android:background="#b4ffffff"
        android:text="@string/unavail"
        android:visibility="gone" />

    <TextView
        android:id="@+id/leadUnavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/achievements"
        android:layout_centerHorizontal="true"
        android:background="#b4ffffff"
        android:text="@string/leadunavail"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner"></com.google.android.gms.ads.AdView>

</RelativeLayout>
